[package]
name = "rpecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
bytemuck = "1.13.1"
colored = "2.0.0"
entropy = "0.4.1"
exe = "0.5.6"
md5 = "0.7.0"
phf = { version = "0.11.2", features = ["macros"] }
term-table = "1.3.2"
term_size = "0.3.2"
