[package]
name = "rpecli"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/N0fix/rpecli"
authors = ["Nofix"]
keywords = ["pe", "portable-executable", "rpecli"]
readme = "README.md"
description = "Rust cli tool to display information about PE files"

[dependencies]
authenticode = "0.2.0"
bytemuck = "1.13.1"
chrono = "0.4.26"
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.0.0"
dataview = "1.0.1"
entropy = "0.4.1"
exe = "0.5.6"
hex = "0.4.3"
human_bytes = "0.4.2"
infer = "0.14.0"
md5 = "0.7.0"
ngrammatic = "0.4.0"
phf = { version = "0.11.2", features = ["macros"] }
term-table = "1.3.2"
term_size = "0.3.2"
cms = { version = "0.2.0", default-features = false }
bitflags = "2.3.3"
pkbuffer = "0.4.2"

[dependencies.iced-x86]
version = "1.19.0"
default-features = false
# See below for all features
features = ["std", "decoder", "intel"]

[profile.release]
strip = "none"
