[package]
name = "rpecli"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/N0fix/rpecli"
authors = ["Nofix"]
keywords = ["pe", "portable-executable", "rpecli"]
readme = "README.md"
description = "Rust cli tool to display information about PE files"

[dependencies]
authenticode = "0.4.0"
bytemuck = "1.13.1"
chrono = "0.4.26"
clap = { version = "4.3.8", features = ["derive"] }
colored = "2.0.0"
dataview = "1.0.1"
entropy = "0.4.1"
exe = "0.5.6"
hex = "0.4.3"
human_bytes = "0.4.2"
infer = "0.14.0"
md5 = "0.7.0"
ngrammatic = "0.4.0"
phf = { version = "0.11.2", features = ["macros"] }
term-table = "1.3.2"
term_size = "0.3.2"
cms = { version = "0.2.0", default-features = false }
bitflags = "2.3.3"
pkbuffer = "0.4.2"
rust-strings = "0.4.0"
sha256 = "1.3.0"
indicatif = "0.17.6"
derivative = "2.2.0"
serde_json = "1.0.105"
serde = { version = "1.0.183", features = ["derive"] }

[dependencies.iced-x86]
version = "1.19.0"
default-features = false
features = ["std", "decoder", "intel"]

[profile.release]
strip = "none"
# Some ptr might be unaligned when parsing import/export thunks, thus panicking rust
# see https://stackoverflow.com/questions/76647616/facing-unexpected-misaligned-pointer-dereference-address-must-be-a-multiple-of/76648301#76648301
debug-assertions = false

[profile.dev]
# Some ptr might be unaligned when parsing import/export thunks, thus panicking rust
# see https://stackoverflow.com/questions/76647616/facing-unexpected-misaligned-pointer-dereference-address-must-be-a-multiple-of/76648301#76648301
debug-assertions = false

[lib]
name = "rpecli"
path = "src/lib.rs"

[[bin]]
name = "rpecli"
path = "src/main.rs"